--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -45,6 +45,10 @@
   &__link + .user-nav__link{
     padding-left: 25px;
   }
+  &__link-img{
+    width: 20px;
+    height: 20px;
+  }
   &__num{
     position: absolute;
     width: 20px;
@@ -59,6 +63,106 @@
     text-align: center;
   }
 }
+
+.footer{
+  background-color: $bg;
+}
+
+.footer-top{
+  padding: 70px 0 40px;
+  border-bottom: 1px solid #ececec;
+  display: flex;
+  justify-content: space-between;
+  &__contact{
+    width: 250px;
+    margin-right: 50px;
+  }
+  &__nav{
+    width: 170px;
+    margin-right: 30px;
+  }
+  &__item-form{
+    max-width: 470px;
+  }
+  &__logo{
+    display: block;
+    margin-bottom: 33px;
+  }
+  &__address,
+  &__email,
+  &__phone{
+    display: block;
+    margin-bottom: 10px;
+  }
+  &__social-list{
+    display: flex;
+    margin-top: 30px;
+    align-items: center;
+  }
+  &__social-item + .footer-top__social-item{
+    padding-left: 18px;
+  }
+  &__social-link{
+    transition: all .3s;
+    svg{
+      fill: $default;
+    }
+    &:hover{
+      svg{
+        fill: $accent;
+      }
+    }
+  }
+  &__title{
+    color: $title;
+    @extend %roboto-400;
+    font-size: 22px;
+    line-height: 1;
+    margin-bottom: 40px;
+  }
+  &__link{
+    margin-bottom: 10px;
+    display: block;
+  }
+  &__text{
+    margin-bottom: 25px;
+  }
+  &__form-input{
+    background-color: #fff;
+    width: 320px;
+    border: none;
+    padding: 12px 10px 12px 15px;
+    box-shadow: 0px 7px 20px 0px rgba(192, 192, 192, 0.3);
+    &::placeholder{
+      color: $default;
+      font-size: 16px;
+    }
+  }
+  &__form-btn{
+    background-color: $accent;
+    border: none;
+    color: #fff;
+    text-transform: uppercase;
+    padding: 12px 26px;
+    box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
+    cursor: pointer;
+  }
+}
+
+.footer-bottom{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 75px;
+  font-size: 12px;
+  &__accept-img{
+    display: inline;
+    vertical-align: middle;
+    margin-left: 25px;
+    text-align: center;
+  }
+}
+
 
 
 
