--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -28,3 +28,19 @@ a{
   line-height: 26px;
   @extend %quicksand-500;
 }
+
+.title{
+  text-align: center;
+  @extend %roboto-700;
+  font-size: 48px;
+  line-height: 65px;
+  text-transform: uppercase;
+  color: $title;
+  margin-bottom: 10px;
+}
+
+.text{
+  text-align: center;
+  max-width: 570px;
+  margin: 0 auto 55px;
+}
