--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -543,6 +543,7 @@
     flex-direction: column;
     justify-content: center;
     text-align: center;
+    box-shadow: 0px 10px 40px 0px rgba(187, 187, 187, 0.3);
     span{
       font-size: 48px;
       @extend %roboto-700;
@@ -569,6 +570,99 @@
     height: 170px;
   }
 }
+
+.blog{
+  padding: 50px 0 160px;
+  background-image: url('../images/blog-bg.svg');
+  background-repeat: no-repeat;
+  background-position: center center;
+  &__items{
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    &::after{
+      content: "";
+      position: absolute;
+      z-index: -1;
+      right: -27px;
+      top: -30px;
+      width: 126px;
+      height: 53px;
+      background-image: url('../images/decor/blog-decor.svg');
+    }
+  }
+  &__item{
+    max-width: 370px;
+    border: 1px solid #ececec;
+    .blog__item-link{
+      svg{
+          width: 10px;
+          height: 8px;
+          fill: $default;
+        }
+      }
+    &:hover{
+      border: none;
+      box-shadow: 20px 0px 60px 0px rgba(202, 202, 202, 0.35);
+      .blog__item-link{
+        color: $accent;
+          svg{
+            fill: $accent;
+          }
+        }
+      }
+    }
+  &__item-imglink{
+    display: block;
+    img{
+      margin: 0 auto;
+      height: 280px;
+      width: 100%;
+      object-fit: cover;
+    }
+  }
+  &__item-box{
+    padding: 30px 40px;
+  }
+  &__item-info{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+  }
+  &__item-author,
+  &__item-date{
+    padding-left: 30px;
+    position: relative;
+    &::before{
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      left: 0;
+      top: 4px;
+    }
+  }
+  &__item-author::before{
+     content: url('../images/icons/user-grey.svg');
+  }
+  &__item-date::before{
+     content: url('../images/icons/time.svg');
+  }
+  &__item-title{
+    font-size: 22px;
+    margin-bottom: 20px;
+    color: $title;
+    @extend %roboto-400;
+  }
+}
+
+
+
+
+
+
+
+
+
 
 
 @import 'media';
