--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -160,6 +160,19 @@
   }
 }
 
+.top{
+  &__container{
+    max-width: 1700px;
+    margin: 0 auto;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top center;
+    padding: 120px 0 130px;
+    text-align: center;
+  }
+  
+}
+
 .top-slider{
   background-image: url('../images/decor/top-slider-bg.png');
   background-repeat: no-repeat;
@@ -655,7 +668,54 @@
   }
 }
 
-
+.modal{
+  padding-top: 100px;
+  max-width: 570px;
+  margin: 0 auto 115px;
+  &__links{
+    text-align: center;
+    margin-bottom: 40px;
+  }
+  &__link{
+    font-size: 22px;
+    color: #909090;
+    @extend %roboto-400;
+    text-transform: uppercase;
+    margin: 0 30px;
+  }
+  &__link--active{
+    color: $accent;
+  }
+  &__label{
+    display: block;
+    margin-bottom: 30px;
+  }
+  &__input{
+    display: block;
+    width: 100%;
+    border: none;
+    background-color: $bg;
+    height: 60px;
+    margin-top: 4px;
+    padding: 0 15px;
+  }
+  &__btn{
+    display: block;
+    background-color: $title;
+    width: 100%;
+    text-transform: uppercase;
+    color: #fff;
+    @extend %roboto-400;
+    padding: 14px 0;
+    border: none;
+    cursor: pointer;
+  }
+  &__error{
+    display: inline-block;
+    margin-top: 12px;
+    color: $accent;
+  }
+}
 
 
 
