--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -720,6 +720,32 @@
   }
 }
 
+.page-404{
+  padding: 110px 0 120px;
+  &__inner{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  &__content{
+    max-width: 570px;
+    width: 100%;
+  }
+  &__title{
+    @extend %roboto-700;
+    font-size: 48px;
+    color: #28384f;
+    margin-bottom: 40px;
+  }
+  &__text{
+    max-width: 470px;
+    margin-bottom: 55px;
+  }
+  &__link{
+    padding: 14px 35px;
+    @extend %btn;
+  }
+}
 
 
 
