--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -435,6 +435,85 @@
 
 .product-item{
   max-width: 370px;
+  text-align: center;
+  &.product-item--list{
+    min-width: 100%;
+    display: flex;
+    text-align: left;
+    &:hover {
+      .product-item__link-box{
+        transform: translateY(-280%);
+      }
+    }
+    .product-item__img-box{
+      height: 250px;
+      min-width: 200px;
+      margin-bottom: 0;
+      img{
+        height: 250px;
+      }
+    }
+    .product-item__link-box{
+      bottom: auto;
+      width: 115px;
+      background-color: transparent;
+      box-shadow: none;
+      .product-item__link{
+        width: 50px;
+        height: 50px;
+        background-color: #fff;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .product-item__link-line{
+        display: none;
+      }
+    }
+    .product-item__content-box{
+      display: block;
+    }
+    .product-item__title{
+      width: 100%;
+      order: -1;
+      padding: 0;
+      margin-bottom: 10px;
+    }
+    .product-item__price{
+      order: -1;
+      margin-left: -12px;
+    }
+    .star{
+      margin-left: 23px;
+    }
+    .product-item__text{
+      margin-bottom: 25px;
+    }
+    .product-item__btn{
+      border: none;
+      padding: 11px 40px;
+      background-color: $title;
+      color: #fff;
+      cursor: pointer;
+      &:hover{
+        background-color: $accent;
+        box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
+      }
+    }
+    .product-item__box{
+      display: flex;
+      flex-wrap: wrap;
+    }
+    .product-item__wrapper-box{
+      padding: 30px 40px;
+      border: 1px solid #ececec;
+      border-left: none;
+    }
+  }
+  &__content-box{
+    display: none;
+  }
   &__img-box{
     position: relative;
     height: 370px;
@@ -747,11 +826,316 @@
   }
 }
 
+.shop{
+  padding: 120px 0 105px;
+  &__inner{
+    display: flex;
+  }
+  &__filters{
+    width: 370px;
+    margin-right: 30px;
+  }
+}
 
+.filter{
+  &__item{
+    padding: 35px 30px 40px;
+    margin-bottom: 40px;
+    border: 1px solid #ececec;
+    
+  }
+  &__title{
+    @extend %roboto-400;
+    font-size: 22px;
+    margin-bottom: 25px;
+    color: $title;
+    text-transform: uppercase;
+  }
+}
 
+.filter-search{
+  &__form{
+    display: flex;
+  }
+  &__input{
+    border: none;
+    background-color: $bg;
+    padding: 0 5px 0 15px;
+    width: 260px;
+    height: 50px;
+  }
+  &__btn{
+    background-color: $accent;
+    border: none;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    svg{
+      width: 15px;
+      height: 15px;
+      fill: #fff;
+    }
+  }
+}
 
+.filter-price{
+  &__label{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 30px;
+  }
+  &__btn{
+    @extend %btn;
+    border: none;
+    cursor: pointer;
+  }
+}
 
+.irs--flat .irs-line{
+  top: 13px;
+  height: 5px;
+  background-color: #ececec;
+  border-radius: 0;
+}
 
+.irs--flat .irs-handle{
+  top: 0px;
+  width: 30px;
+  height: 30px;
+  background-color: #fff;
+  box-shadow: 0px 0px 13px 0px rgba(90, 90, 90, 0.2);
+}
+
+.irs--flat .irs-handle>i:first-child{
+  display: none;
+}
+
+.irs--flat .irs-bar{
+  top: 13px;
+  height: 5px;
+  background-color: $accent;
+}
+
+.irs-from,
+.irs-to,
+.irs-single{
+  display: none;
+}
+
+.irs--flat{
+  height: 30px;
+}
+.irs--flat .irs-min, .irs--flat .irs-max {
+  display: none;
+}
+
+.filter-color{
+  &__label{
+    padding-bottom: 20px;
+    border-bottom: 1px solid #ececec;
+    display: flex;
+    justify-content: space-between;
+    & + .filter-color__label{
+      padding-top: 20px;
+    }
+    &:last-child{
+      border-bottom: none;
+      padding-bottom: 0;
+    }
+  }
+  &__input{
+    @extend %checkbox-hidden;
+    &:checked + .filter-color__checkbox{
+      background-image: url('../images/icons/check.svg');
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+  }
+  &__checkbox{
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    margin: 7px 0 0 -16px;
+  }
+  &__checkbox--blue{
+    background-color: #00aeef;
+  }
+  &__checkbox--red{
+    background-color: #f52574;
+  }
+  &__checkbox--green{
+    background-color: #24d4ac;
+  }
+  &__checkbox--orange{
+    background-color: #ff7e00;
+  }
+  &__checkbox--black{
+    background-color: #000;
+  }
+  &__checkbox--purple{
+    background-color: #923899;
+  }
+}
+
+.filter-size{
+  &__label{
+    padding-left: 35px;
+    margin-bottom: 20px;
+    display: block;
+  }
+  &__input{
+    @extend %checkbox-hidden;
+    &:checked + .filter-size__checkbox{
+      background-image: url('../images/icons/check-size.svg');
+      border: none;
+      & + .filter-size__text{
+        color: $accent
+      }
+    }
+  }
+  &__checkbox{
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    border: 1px solid $default;
+    position: absolute;
+    margin: 3px 0 0 -35px;
+  }
+}
+
+.filter-category{
+  &__label{
+    display: block;
+    margin-bottom: 15px;
+    &:last-child{
+      margin-bottom: 0;
+    }
+  }
+  &__input{
+    @extend %checkbox-hidden;
+    &:checked + .filter-category__checkbox{
+      background-color: $accent;
+      color: #fff;
+    }
+  }
+  &__checkbox{
+    display: flex;
+    justify-content: space-between;
+    color: $title;
+    background-color: #f6f6f6;
+    padding: 16px 18px 18px 14px;
+  }
+}
+
+.filter-popular{
+  &__label{
+    display: inline-block;
+    margin-bottom: 20px;
+    margin-right: 8px;
+    padding: 10px 0;
+    cursor: pointer;
+    &:last-child{
+      margin-bottom: 0;
+    }
+  }
+  &__input{
+    @extend %checkbox-hidden;
+    &:checked + .filter-popular__checkbox{
+      background-color: $accent;
+      color: #fff;
+      border-color: $accent;
+    }
+  }
+  &__checkbox{
+    background-color: #fff;
+    padding: 10px 16px;
+    border: 1px solid $default;
+  }
+}
+
+.shop-content{
+  width: 100%;
+  &__inner{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    border-bottom: 1px solid #ececec;
+    .product-item{
+      margin-bottom: 40px;
+    }
+  }
+  &__filter{
+    border: 1px solid #ececec;
+    padding: 20px 25px 20px 30px;
+    margin-bottom: 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  &__filter-buttons{
+    display: flex;
+    align-items: center;
+  }
+  &__filter-btn{
+    padding: 0;
+    outline: none;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    margin-left: 15px;
+    line-height: 0;
+    svg{
+      width: 15px;
+      height: 15px;
+      fill: $default;
+    }
+    &.shop-content__filter-btn--grid{
+      svg{
+        fill: $accent;
+      }
+    }
+  }
+  &__filter-btn--list{
+    svg{
+      width: 20px;
+      height: 15px;
+      fill: $default;
+    }
+  }
+}
+
+.jq-selectbox__select{
+  height: 32px;
+  padding: 0 30px 0 0;
+  margin-left: 30px;
+  border: none;
+  background: transparent;
+  box-shadow: none;
+  @extend %quicksand-500;
+  color: $default;
+  text-shadow: none;
+  &:hover{
+    background: transparent;
+  }
+}
+
+.jq-selectbox__trigger{
+  border-left: none;
+}
+
+.jq-selectbox__trigger-arrow{
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  width: 10px;
+  height: 5px;
+  border: none;
+  background-image: url('../images/icons/angle-down.svg');
+}
 
 
 
