--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1137,6 +1137,428 @@
   background-image: url('../images/icons/angle-down.svg');
 }
 
+.product-page{
+  padding: 120px 0 0px;
+}
+
+.product-one{
+  &__inner{
+    display: flex;
+  }
+  &__slide{
+    width: 730px;
+    margin-right: 70px;
+  }
+  &__content{
+    width: 370px;
+  }
+  &__title{
+    margin-bottom: 20px;
+    color: $title;
+    font-size: 20px;
+  }
+  &__box{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 25px;
+  }
+  &__price{
+    display: flex;
+    font-size: 18px;
+  }
+  &__price-new{
+    color: $title;
+  }
+  &__price-old{
+    text-decoration: line-through;
+    padding-left: 15px;
+  }
+  &__star{
+    display: flex;
+    align-items: center;
+    span{
+      padding-left: 8px;
+      color: $title;
+      font-size: 22px;
+    }
+  }
+  &__text{
+    margin-bottom: 30px;
+    span{
+      display: block;
+      color: $title;
+      @extend %roboto-400;
+      font-size: 18px;
+    }
+  }
+  &__btn{
+    @extend %btn;
+    border: none;
+    margin-left: 15px;
+    cursor: pointer;
+  }
+}
+
+.jq-number__field{
+  width: 114px;
+  border: 1px solid #f0f0f0;
+  transform: translateY(1px);
+}
+
+.jq-number__field input{
+  width: 100%;
+  height: 50px;
+  border: none;
+  outline: none;
+  @extend %quicksand-500;
+  color: $title;
+  text-align: center;
+}
+
+.jq-number{
+  padding: 0;
+  position: relative;
+}
+
+.jq-number__spin{
+  position: absolute;
+  top: 50%;
+  width: 12px;
+  height: 12px;
+  cursor: poiner;
+  transform: translateY(-50%);
+}
+
+.jq-number__spin.minus{
+  left: 15px;
+}
+
+.jq-number__spin.plus{
+  right: 15px;
+}
+
+.jq-number__spin::after {
+  content: "";
+  position: absolute;
+  top: 6px;
+  left: 0;
+  background-color: $title;
+  width: 14px;
+  height: 1px;
+}
+
+.jq-number__spin.plus::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 6px;
+  background-color: $title;
+  width: 1px;
+  height: 12px;
+}
+
+.product-info{
+  &__list{
+    margin-bottom: 30px;
+  }
+  &__item{
+    display: flex;
+    margin-bottom: 5px;
+  }
+  &__title{
+    min-width: 100px;
+    color: $title;
+  }
+  &__link{
+    & + .product-info__link{
+      margin-left: 15px;
+    }
+  }
+}
+
+.product-slide{
+  display: flex;
+  .slick-vertical .slick-slide{
+    height: 140px;
+    margin-bottom: 30px;
+  }
+  &__thumb{
+    width: 140px;
+    margin-right: 30px;
+  }
+  &__thumb-item{
+    margin-bottom: 30px;
+    width: 140px;
+    height: 140px;
+    cursor: pointer;
+    img{
+      width: 140px;
+      height: 140px;
+      object-fit: cover;
+    }
+  }
+  &__big{
+    width: 560px;
+    img{
+      width: 560px;
+      height: 650px;
+      object-fit: cover;
+    }
+  }
+}
+
+.product-filter{
+  &__color{
+    margin-bottom: 25px;
+    label{
+      margin-right: 10px;
+    }
+  }
+  &__color-input{
+    @extend %radio-hidden;
+    &:checked{
+      & + .product-filter__color-checkbox{
+        border-color: $accent;
+      }
+    }
+  }
+  &__color-checkbox{
+    width: 24px;
+    height: 24px;
+    border: 1px solid #ccccce;
+    cursor: pointer;
+    position: relative;
+    display: inline-block;
+    span{
+      display: inline-block;
+      position: absolute;
+      top: 3px;
+      left: 3px;
+      width: 16px;
+      height: 16px;
+      background-color: red;
+
+    }
+  }
+  &__color-title,
+  &__size-title{
+    font-size: 18px;
+    color: $title;
+    @extend %roboto-400;
+    margin-bottom: 5px;
+  }
+  &__size{
+    margin-bottom: 35px;
+    label{
+      margin-right: 10px;
+      display: inline-block;
+    }
+  }
+  &__size-input{
+    @extend %checkbox-hidden;
+      &:checked {
+        &+.product-filter__size-checkbox{
+        border-color: $accent;
+      }
+    }
+  }
+  &__size-checkbox{
+    padding: 4px 12px;
+    border: 1px solid #eeeeec;
+    display: inline-block;
+  }
+}
+
+.product-tabs{
+  padding-top: 110px;
+  &__top{
+    margin-bottom: 40px;
+    border-bottom: 1px solid #f0f0f0;
+    @extend %roboto-400;
+    font-size: 22px;
+  }
+  &__top-item{
+    display: inline-block;
+    margin-bottom: 10px;
+    & + .product-tabs__top-item{
+      margin-left: 55px;
+    }
+  }
+  &__top-item--active{
+    color: $title;
+    position: relative;
+    &::before{
+      content: '';
+      position: absolute;
+      bottom: -11px;
+      left: 0;
+      right: 0;
+      width: 100%;
+      height: 1px;
+      background-color: $accent;
+    }
+  }
+  &__content-item{
+    display: none;
+    &.product-tabs__content-item--active{
+      display: block;
+    }
+  }
+}
+
+.comments {
+  margin-bottom: 40px;
+  display: flex;
+  &__img {
+    min-width: 71px;
+    height: 71px;
+    margin-right: 30px;
+    border-radius: 50%;
+    overflow: hidden;
+    object-fit: cover;
+  }
+  &__content-top {
+    display: flex;
+    margin-bottom: 10px;
+  }
+  &__content-name {
+    color: $title;
+    margin-right: 13px;
+    @extend %roboto-400;
+  }
+  &__content-date {
+    padding-left: 13px;
+    border-left: 1px solid $default;
+  }
+  &__content-star {
+    margin-left: auto;
+    margin-right: 0;
+  }
+  &__content-text {
+    margin-bottom: 10px;
+  }
+  &__content-reply {
+    display: inline-block;
+    padding-left: 25px;
+    position: relative;
+    &::before{
+      content: '';
+      position: absolute;
+      top: 6px;
+      left: 0;
+      width: 15px;
+      height: 13px;
+      background-image: url(../images/icons/reply.svg);
+    }
+  }
+}
+
+.comments-form{
+  border-bottom: 1px solid #f0f0f0;
+  padding-bottom: 60px;
+  &__title{
+    color: $title;
+    @extend %roboto-400;
+    font-size: 22px;
+    margin-bottom: 30px;
+    padding-bottom: 10px;
+    position: relative;
+    &::before{
+      content: '';
+      position: absolute;
+      height: 1px;
+      width: 50px;
+      bottom: 0;
+      left: 0;
+      background-color: $accent;
+    }
+  }
+  &__rating{
+    margin-bottom: 30px;
+  }
+  &__rating-title {
+    color: $title;
+    margin-right: 60px;
+  }
+  &__label{
+    margin-right: 25px;
+  }
+  &__input{
+    @extend %radio-hidden;
+    &:checked + .comments-form__radio{
+      .comments-form__radio-star{
+        fill: #ffc35b;
+      }
+    }
+  }
+  &__radio{
+    cursor: pointer;
+  }
+  &__box-input{
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: space-between
+  }
+  &__text-input{
+    width: 570px;
+    display: inline-block;
+    height: 50px;
+    padding: 0 20px;
+    border: 1px solid #f0f0f0;
+  }
+  &__textarea{
+    padding: 15px 20px;
+    border: 1px solid #f0f0f0;
+    display: block;
+    height: 225px;
+    width: 100%;
+    resize: none;
+    margin-bottom: 40px;
+  }
+  &__btn{
+    border: none;
+    @extend %btn;
+  }
+  &__radio-star{
+    width: 16px;
+    height: 18px;
+    fill: #d8d8d8;
+  }
+}
+
+.related{
+  padding: 50px 0 120px;
+  &__title{
+    margin-bottom: 50px;
+  }
+  &__items{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-column-gap: 30px;
+    .product-item__img-box{
+      height: auto;
+    }
+    .product-item__title{
+      padding: 5px 0;
+    }
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 @import 'media';
