--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -717,34 +717,44 @@
     padding: 30px 40px;
   }
   &__item-info{
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 20px;
+    
   }
   &__item-author,
   &__item-date{
-    padding-left: 30px;
-    position: relative;
-    &::before{
-      position: absolute;
-      width: 20px;
-      height: 20px;
-      left: 0;
-      top: 4px;
-    }
+
   }
-  &__item-author::before{
-     content: url('../images/icons/user-grey.svg');
-  }
-  &__item-date::before{
-     content: url('../images/icons/time.svg');
-  }
+  
   &__item-title{
     font-size: 22px;
     margin-bottom: 20px;
     color: $title;
     @extend %roboto-400;
   }
+}
+
+.blog-box{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+  &__author,
+  &__date{
+    padding-left: 30px;
+    position: relative;
+      &::before{
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        left: 0;
+        top: 4px;
+    }
+  }
+    &__author::before {
+      content: url('../images/icons/user-grey.svg');
+    }
+  
+    &__date::before {
+      content: url('../images/icons/time.svg');
+    }
 }
 
 .modal{
@@ -1544,9 +1554,198 @@
   }
 }
 
+.blog-page{
+  padding: 120px 0 60px;
+  &__item--slider{
+    .blog-page__item-box {
+        margin-top: -8px;
+      }
+  }
+  &__inner{
+    display: flex;
+    justify-content: space-between;
+  }
+  &__content{
+    width: 770px;
+    margin-right: 30px;
+  }
+  &__item{
+    margin-bottom: 60px;
+    &.blog-page__item--no-image {
+      border-top: 1px solid #ececec;
+      box-shadow: 0px 20px 60px 0px rgba(202, 202, 202, 0.35);
+    }
+  }
+  &__slider{
+    .slick-next,
+    .slick-prev{
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      z-index: 5;
+      width: 40px;
+      height: 40px;
+      background-color: $accent;
+      border: none;
+      border-radius: 50%;
+      cursor: pointer;
+      box-shadow: 0px 7px 20px 0px rgba(254, 62, 87, 0.3);
+      svg{
+        position: absolute;
+        top: 10px;
+      }
+    }
+    .slick-prev{
+      left: 40px;
+      svg{
+        right: 15px;
+      }
+    }
+    .slick-next{
+      right: 40px;
+      svg {
+        left: 17px;
+      }
+    }
+    .slick-disabled{
+      background-color: #fff;
+      box-shadow: 0px 7px 20px 0px rgba(168, 168, 168, 0.3);
+      svg{
+        path{
+          fill: $accent;
+        }
+      }
+    }
+  }
+  &__item-link{
+    display: block;
+    color: inherit;
+    font-family: inherit;
+    font-size: inherit;
+  }
+  &__img{
+    max-width: 770px;
+    height: 450px;
+    object-fit: cover;
+    display: block;
+  }
+  &__item-box{
+    border: 1px solid #ececec;
+    border-top: none;
+    padding: 40px;
+  }
+  &__item-title{
+    color: $title;
+    margin-bottom: 20px;
+    font-size: 22px;
+    line-height: 32px;
+    @extend %roboto-700;
+    transition: all .3s;
+    &:hover{
+      color: $accent;
+    }
+  }
+  .blog-box{
+    justify-content: start;
+    &__author{
+      margin-right: 30px;
+    }
+  }
+  &__aside{
+    width: 370px;
+  }
+}
 
+.person{
+  border: 1px solid #ececec;
+  text-align: center;
+  padding: 40px 25px;
+  margin-bottom: 40px;
+  &__img{
+    display: inline-block;
+    width: 160px;
+    height: 160px;
+    object-fit: cover;
+    margin: 0 auto;
+    margin-bottom: 35px;
+  }
+  &__name{
+    @extend %roboto-700;
+    font-size: 18px;
+    color: $title;
+  }
+  &__position{
+    @extend %quicksand-500;
+    color: $accent;
+    margin-bottom: 25px;
+  }
+  &__text{
+    margin-bottom: 30px;
+  }
+  &__social{
+    &-link + .person__social-link{
+      margin-left: 10px;
+    }
+    &-link--img{
+      fill: $default;
+      transition: all .3s;
+      width: 20px;
+      height: 20px;
+    }
+    &-link--img:hover{
+      fill: $accent;
+    }
+  }
+}
 
-
+.latest-post{
+  padding: 35px 30px 40px;
+  border: 1px solid #ececec;
+  margin-bottom: 40px;
+  &__title{
+    color: $title;
+    text-transform: uppercase;
+    @extend %roboto-400;
+    font-size: 22px;
+  }
+  &__item{
+    margin-bottom: 20px;
+    display: flex;
+    & + .latest-post__item{
+      border-top: 1px solid #ececec;
+      padding-top: 20px;
+    }
+  }
+  &__img-link{
+    display: block;
+    margin-right: 20px;
+    min-width: 80px;
+  }
+  &__img{
+    width: 80px;
+    height: 80px;
+    object-fit: cover;
+  }
+  &__title-link {
+    @extend %roboto-400;
+    font-size: 18px;
+    line-height: 28px;
+    color: $title;
+  }
+  &__date{
+    padding-left: 26px;
+    position: relative;
+    &::before{
+      content: '';
+      position: absolute;
+      left: 0;
+      top: 5px;
+      background-image: url('../images/icons/calendar.svg');
+      width: 16px;
+      height: 16px;
+    }
+  }
+}
 
 
 
