--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1707,6 +1707,7 @@
     text-transform: uppercase;
     @extend %roboto-400;
     font-size: 22px;
+    margin-bottom: 35px;
   }
   &__item{
     margin-bottom: 20px;
@@ -1747,6 +1748,129 @@
   }
 }
 
+.blog-one{
+  &__text{
+    border: 1px solid #ececec;
+      border-top: none;
+      padding: 30px;
+      margin-top: -1px;
+    h4{
+      color: $title;
+      font-size: 22px;
+      @extend %roboto-700;
+      margin: 25px 0px;
+    }
+    p{
+      margin: 25px 0;
+    }
+    blockquote{
+      background: $bg;
+      border-left: 3px solid $accent;
+      color: $title;
+      @extend %roboto-400;
+      font-size: 22px;
+      margin: 25px 0;
+      padding: 35px;
+    }
+  }
+  &__left-img{
+    float: left;
+    margin-right: 30px;
+    margin-bottom: 10px;
+  }
+  &__right-img{
+    float: right;
+    margin-left: 30px;
+    margin-bottom: 10px;
+  }
+  &__info{
+    display: flex;
+    margin-bottom: 25px;
+  }
+  &__info-link{
+    margin-right: 30px;
+    padding-left: 28px;
+    position: relative;
+    &::before{
+      content: '';
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 16px;
+      height: 16px;
+      background-image: url('../images/icons/calendar.svg');
+    }
+  }
+  &__info-link--comment::before{
+    background-image: url('../images/icons/comment.svg');
+    top: 3px;
+  }
+  &__info-link--author::before{
+    background-image: url('../images/icons/admin.svg');
+  }
+  &__form-title{
+    text-transform: uppercase;
+    margin: 35px 0 25px;
+    color: $title;
+    @extend %roboto-700;
+    font-size: 24px;
+  }
+  .comments-form{
+    border-bottom: none;
+  }
+  &__box{
+    margin: 25px 0 35px;
+    display: flex;
+    justify-content: space-between;
+  }
+  &__tags,
+  &__share{
+    span{
+      text-transform: uppercase;
+      color: $title;
+      @extend %roboto-700;
+    }
+  }
+  &__share{
+    a{
+      margin-left: 12px;
+      vertical-align: middle;
+      svg{
+        transition: all .3s;
+        fill: #727272;
+        width: 16px;
+        height: 16px;
+      }
+      svg:hover{
+        fill: $accent;
+      }
+    }
+  }
+  &__author{
+    border-bottom: 1px solid #ececec;
+    padding-bottom: 40px;
+    margin-bottom: 40px;
+    display: flex;
+  }
+  &__author-img{
+    width: 140px;
+    height: 140px;
+    margin-right: 30px;
+    object-fit: cover;
+  }
+  &__author-name{
+    @extend %roboto-700;
+    font-size: 22px;
+    margin-bottom: 24px;
+    color: $title;
+  }
+}
+.comments__title{
+  font-size: 24px;
+  @extend %roboto-700;
+  color: $title;
+  margin-bottom: 25px;
+}
 
 
 
