--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1872,8 +1872,116 @@
   margin-bottom: 25px;
 }
 
+.map{
+  padding: 120px 0;
+}
+
+#map{
+  width: 100%;
+  height: 450px;
+}
 
 
+.contact{
+  padding-bottom: 120px;
+  &__inner{
+    display: flex;
+  }
+  &__info{
+    max-width: 370px;
+    margin-right: 30px;
+  }
+  &__info-title{
+    @extend %roboto-700;
+    font-size: 48px;
+    line-height: 58px;
+    color: $title;
+    margin-bottom: 20px;
+  }
+  &__info-text{
+    margin-bottom: 60px;
+  }
+  &__info-item{
+    color: $title;
+    margin-top: 55px;
+    padding-left: 80px;
+    position: relative;
+    &::before{
+      content: '';
+      position: absolute;
+      top: -5px;
+      left: 0;
+      width: 60px;
+      height: 60px;
+      box-shadow: 0px 5px 20px 0px rgba(146, 146, 146, 0.3);
+    }
+    &::after{
+      content: '';
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      background-image: url('../images/icons/phone_icon.svg');
+      left: 20px;
+      top: 15px;
+    }
+  }
+  &__info--email::after{
+    width: 15px;
+    left: 21px;
+    background-image: url('../images/icons/location_icon.svg');
+  }
+  &__info--location::after{
+    width: 18px;
+    left: 23px;
+    background-image: url('../images/icons/email.svg');
+  }
+  &__info-
+  &__info-phone{
+    color: $title;
+    display: block;
+  }
+  &__form{
+    padding: 60px 40px;
+    box-shadow: 0px 5px 20px 0px rgba(146, 146, 146, 0.3);
+    width: 100%;
+  }
+    &__form-title{
+      font-size: 22px;
+      margin-bottom: 20px;
+      color: $title;
+      @extend %roboto-700;
+    }
+    &__form-input{
+      width: 100%;
+      height: 60px;
+      display: block;
+      background-color: $bg;
+      border: none;
+      padding: 0 24px;
+      margin-bottom: 30px;
+    }
+    &__form-textarea{
+      width: 100%;
+      display: block;
+      resize: none;
+      height: 200px;
+      background-color: $bg;
+      border: none;
+      padding: 24px;
+      margin-bottom: 30px;
+    }
+    &__form-box{
+      display: flex;
+      justify-content: space-between;
+      input{
+        width: 330px;
+      }
+    }
+    &__form-btn{
+      @extend %btn;
+      border: none;
+    }
+}
 
 
 
